# rendering-engine

./: CMakeLists.txt  README.md
include/: stb_image.h
include/glad/: glad.h
resources/shaders/: basic-fragment.fs  basic-vertex.vs  sky-fragment.fs  sky-vertex.vs
src/: glad.c  main.cpp
src/demo/: demo_components.h
src/engine/: EngineLogger.cpp  EngineLogger.h  data_model.h
src/engine/application/: Application.cpp  Application.h  KeyListener.h  SceneBuilder.h
src/engine/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SimpleShader.cpp  SimpleShader.h  Skybox.cpp  Skybox.h
src/engine/data_model/: Component.cpp  Component.h  data_model.h
